--- a/src/style.css
+++ b/src/style.css
@@ -263,3 +263,15 @@ form{
 	background: var(--accent2);
 	transition: 0.3s;
 }
+
+
+#copyNote{
+	font-size: 12px;
+	color: var(--white);
+	background: var(--darkgray);
+	padding: 4px 8px;
+	border-radius: 3px;
+	margin-top: 14px;
+	display: none;
+	transition: 0.3s;
+}
